# CSSE4011_Project

./: CMakeLists.txt  README.md  install.sh
app/: CMakeLists.txt  prj.conf
app/boards/: disco_l475_iot1.overlay  m5stack_core2_procpu.conf  m5stack_core2_procpu.overlay
app/src/: controller.c  controller.h  event.c  event.h  fight.c  fight.h  fight_ad.c  fight_ad.h  fight_observer.c  fight_observer.h  game.c  game.h  game_controller.c  game_controller.h  main.c  pokedex.c  pokedex.h  ui_controller.c  ui_controller.h  user.c  user.h
app/src/ui/: viewer.c  viewer.h
app/src/ui/images/: bGround.c  battleground_a.c  battleground_b.c  bulbaback.c  bulbafront.c  charback.c  charfront.c  clefback.c  cleffront.c  img_star.c  mewback.c  mewfront.c  pidgeback.c  pidgefront.c  pikaback.c  pikafront.c  poliback.c  polifront.c  squirtback.c  squirtfront.c
artemis_assets/: README.md
base/: CMakeLists.txt  prj.conf
base/boards/: disco_l475_iot1.overlay
base/src/: main.c
dashboard/: README.md  index.html
dashboard/backend/: app.js
dashboard/frontend/: app.js  index.html
keypad/: CMakeLists.txt  prj.conf
keypad/boards/: m5stack_core2_procpu.overlay
keypad/src/: keypad.c
libs/: file_logging.c  file_logging.h  keypad.c  keypad.h  ultrasonic.c  ultrasonic.h
libs/bt/: CMakeLists.txt  bluetooth.c  bluetooth.h  bt_advertisement.h  bt_advertiser.c  bt_advertiser.h  bt_observer.h  bt_scanner.c  bt_scanner.h  cli_observer.c
libs/wifi/: sockets.c  wifi.c  (+1 more)
milestone/: Message-Protocol.drawio
scripts/: arena.sh  console.sh  fix-west.sh
ui/: CMakeLists.txt  prj.conf
(+17 files in other folders)
